syntax = "proto3";

package calculator;

option go_package="calculatorpb";

//this should be the method name e.g SumRequest
message CalculatorRequest{
    int32 num1 = 1;
    int32 num2 = 2;
}

//this should be the method name e.g SumResponse
message CalculatorResponse{
    int32 result = 1;
}

message PrimeNumberDecompositionRequest{
    int32 number = 1;
}

message PrimeNumberDecompositionResponse{
    int32 result = 1;
}

message ComputeAverageRequest{
    int32 number = 1;
}

message ComputeAverageResponse{
    float average = 1;
}

message SquareRootRequest{
    int32 number = 1;
}

message SquareRootResponse{
    double number_root = 1;
}

service CalculatorService{

    // Unary
    rpc Sum(CalculatorRequest) returns (CalculatorResponse){};

    // Server Streaming
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse){};

    // Client Streaming
    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse){};

    // gRPC for error handling implementation
    // tis RPC will throw error if the sent number in -ve
    // The error being sent is of type INVALID_ARGUMENT
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse){};
}