syntax = "proto3";

package greet;

option go_package="greetpb";

message Greeting{
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}

message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message GreetManyTimesResponse {
    string result = 1;
}

message LongGreetRequest{
    Greeting greeting = 1;
}

message LongGreetResponse{
    string result = 1;
}

// This service will bind to ONE port on the server. Analogous to 1 microservice
// This service exposes 3 methods. Analogous to 3 verbs in REST
service GreetService{

    //unary
    rpc Greet(GreetRequest) returns (GreetResponse){};

    // Server Streaming
    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse){};

    // Client Streaming
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse){};
}